# breatic_ai

./: .gitignore  LICENSE  README.md  docker-compose.yml
app/: .env.example  .pre-commit-config.yaml  Dockerfile  docker_config.py  init_env.py  main.py  pyproject.toml
app/api/: router.py
app/api/auth/: db_account.py  router.py
app/api/auth/email/: router.py
app/api/auth/google/: router.py
app/api/auth/logout/: router.py
app/api/auth/model/: accounts.py
app/api/plan/: router.py
app/api/plan/credit/: router.py
app/api/plan/list/: router.py
app/api/stripe/: router.py
app/api/stripe/cancel_payment/: db.py  router.py
app/api/stripe/cancel_subscription/: db.py  router.py
app/api/transaction/: router.py
app/api/user/: db_users.py  router.py
app/api/workflow/: router.py
app/api/ws/: router.py
app/cdn/: aliyun_oss.py
app/common/: biz_response.py  httpx_client.py  redis_concurrency_client.py  transactional.py
app/data/: credit.py  membership.py
app/editor/model/: base_model.py  model_factory.py
app/editor/node/: base_audio_node.py  base_image_node.py  base_node.py  base_text_node.py  base_video_node.py  node_factory.py
app/initdb/: schema.sql
app/locales/: translations.py
app/locales/email_content/: cn.py  en.py  ja.py  tw.py
app/locales/languages/: cn.py  en.py  ja.py  tw.py
app/locales/node_template/: cn.py
app/utils/: auth.py  core.py  db_model.py  db_page.py  email_sender.py  exception.py  file_utils.py  github_check.py  helper.py  hook.py  id_generator.py  log.py  s3_utils.py  stripe.py  time_utils.py
web/: .env.example  (+10 more)
(+261 files in other folders)
